--- a/Server/WCFServer/LocationWCF/Location.Server.csproj
+++ b/Server/WCFServer/LocationWCF/Location.Server.csproj
@@ -182,6 +182,9 @@
     <Compile Include="Controls\ServerManagerBox.xaml.cs">
       <DependentUpon>ServerManagerBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Authorization\AuthorizationWindow.xaml.cs">
+      <DependentUpon>AuthorizationWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Models\EngineTool\ArchorConfigureBox.xaml.cs">
       <DependentUpon>ArchorConfigureBox.xaml</DependentUpon>
     </Compile>
@@ -236,6 +239,10 @@
       <DependentUpon>LocationHistoryTestWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Controls\ServerManagerBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Models\Authorization\AuthorizationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
