--- a/BLL/BLL/BLL.csproj
+++ b/BLL/BLL/BLL.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Bll_Init.cs" />
     <Compile Include="Bll_InitTopo.cs" />
     <Compile Include="Bll_InsertPos.cs" />
+    <Compile Include="DbInitializer.cs" />
     <Compile Include="ServiceHelpers\PhysicalTopologySP.cs" />
     <Compile Include="ServiceHelpers\U3DPositionSP.cs" />
     <Compile Include="TagRelationBuffer.cs" />
