完善DbInitializer 代码移动完成

--- a/BLL/BLL/BLL.csproj
+++ b/BLL/BLL/BLL.csproj
@@ -119,9 +119,9 @@
     <Compile Include="Blls\Location\WorkTicketBll.cs" />
     <Compile Include="Bll_Business.cs" />
     <Compile Include="Bll_Init.cs" />
-    <Compile Include="Bll_InitTopo.cs" />
     <Compile Include="Bll_InsertPos.cs" />
     <Compile Include="DbInitializer.cs" />
+    <Compile Include="DbInitializerAreaTree.cs" />
     <Compile Include="ServiceHelpers\PhysicalTopologySP.cs" />
     <Compile Include="ServiceHelpers\U3DPositionSP.cs" />
     <Compile Include="TagRelationBuffer.cs" />
