--- a/Client/WPFWCFClient/WPFClientControlLib/WPFClientControlLib.csproj
+++ b/Client/WPFWCFClient/WPFClientControlLib/WPFClientControlLib.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -66,6 +67,10 @@
     <Compile Include="AreaListBox.xaml.cs">
       <DependentUpon>AreaListBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\DragInCanvasBehavior.cs" />
+    <Compile Include="Behaviors\MoveRectangleBehavior.cs" />
+    <Compile Include="Behaviors\RectangleHelper.cs" />
+    <Compile Include="Behaviors\ResizeRectangleBehavior.cs" />
     <Compile Include="DbDeviceListBox.xaml.cs">
       <DependentUpon>DbDeviceListBox.xaml</DependentUpon>
     </Compile>
