--- a/Server/WCFServer/Tools/PositionSimulation/PositionSimulation.csproj
+++ b/Server/WCFServer/Tools/PositionSimulation/PositionSimulation.csproj
@@ -93,6 +93,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SimulationServer.cs" />
     <Compile Include="SimulationWindow.xaml.cs">
       <DependentUpon>SimulationWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
