--- a/Client/WPFWCFClient/WCFServiceForWPF/WCFServiceForWPF.csproj
+++ b/Client/WPFWCFClient/WCFServiceForWPF/WCFServiceForWPF.csproj
@@ -78,9 +78,11 @@
     <None Include="Properties\DataSources\TModel.BaseData.Ticket.datasource" />
     <None Include="Properties\DataSources\TModel.Location.AreaAndDev.Archor.datasource" />
     <None Include="Properties\DataSources\TModel.Location.AreaAndDev.AreaStatistics.datasource" />
+    <None Include="Properties\DataSources\TModel.Location.AreaAndDev.NearbyDev.datasource" />
     <None Include="Properties\DataSources\TModel.Location.AreaAndDev.Picture.datasource" />
     <None Include="Properties\DataSources\TModel.Location.Manage.LoginInfo.datasource" />
     <None Include="Properties\DataSources\TModel.Location.Nodes.AreaNode.datasource" />
+    <None Include="Properties\DataSources\TModel.Location.Person.NearbyPerson.datasource" />
     <None Include="Properties\DataSources\TModel.Location.Person.NearbyPerson_Currency.datasource" />
     <None Include="Properties\DataSources\TModel.Location.Work.MobileInspection.datasource" />
     <None Include="Properties\DataSources\TModel.Location.Work.MobileInspectionDev.datasource" />
@@ -153,10 +155,10 @@
     <None Include="Service References\LocationServices\TModel.Location.Manage1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\LocationServices\TModel.Location.Nodes.xsd">
+    <None Include="Service References\LocationServices\TModel.Location.Nodes1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\LocationServices\TModel.Location.Person.xsd">
+    <None Include="Service References\LocationServices\TModel.Location.Person1.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\LocationServices\TModel.Location.Work1.xsd">
