--- a/Server/WCFServer/Tools/PositionSimulation/PositionSimulation.csproj
+++ b/Server/WCFServer/Tools/PositionSimulation/PositionSimulation.csproj
@@ -168,6 +168,10 @@
       <Project>{7327244d-e163-4c35-9c1a-8dbdf06b9408}</Project>
       <Name>NsqSharp</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\WebApi\WebApiComunication\WebApiCommunication.csproj">
+      <Project>{474692d2-fc7e-4835-87a0-089bc2f88af0}</Project>
+      <Name>WebApiCommunication</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\..\packages\System.Data.SQLite.Core.1.0.109.2\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\..\..\..\packages\System.Data.SQLite.Core.1.0.109.2\build\net45\System.Data.SQLite.Core.targets')" />
