--- a/BLL/BLL/BLL.csproj
+++ b/BLL/BLL/BLL.csproj
@@ -57,7 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppContext.cs" />
-    <Compile Include="BaseBuffer.cs" />
+    <Compile Include="Buffers\AuthorizationBuffer.cs" />
+    <Compile Include="Buffers\BaseBuffer.cs" />
     <Compile Include="Bll.cs" />
     <Compile Include="Blls\BaseBll.cs" />
     <Compile Include="Blls\Engine\bus_archorBll.cs" />
@@ -126,11 +127,12 @@
     <Compile Include="Initializers\AreaTreeInitializer.cs" />
     <Compile Include="ServiceHelpers\PhysicalTopologySP.cs" />
     <Compile Include="ServiceHelpers\U3DPositionSP.cs" />
-    <Compile Include="TagRelationBuffer.cs" />
+    <Compile Include="Buffers\TagRelationBuffer.cs" />
     <Compile Include="TestBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\DevInfoHelper.cs" />
     <Compile Include="Tools\KKSCodeHelper.cs" />
+    <Compile Include="Tools\LightUDP.cs" />
     <Compile Include="Tools\LocationDeviceHelper.cs" />
     <Compile Include="Tools\Log.cs" />
     <Compile Include="Tools\RandomTool.cs" />
