代码重构：树控件面向接口编程

--- a/Model/IModel/IModel.csproj
+++ b/Model/IModel/IModel.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="enums.cs" />
+    <Compile Include="Extensions\TreeNodeExtensions.cs" />
     <Compile Include="FuncArgs\IAlarmSearchArg.cs" />
     <Compile Include="IClone.cs" />
     <Compile Include="Locations\IDepartment.cs" />
