区域、设备节点右键菜单

--- a/Client/WPFWCFClient/WPFClientControlLib/WPFClientControlLib.csproj
+++ b/Client/WPFWCFClient/WPFClientControlLib/WPFClientControlLib.csproj
@@ -75,6 +75,7 @@
     <Compile Include="DbDeviceListBox.xaml.cs">
       <DependentUpon>DbDeviceListBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\MenuExtensions.cs" />
     <Compile Include="ItemInfoWindow.xaml.cs">
       <DependentUpon>ItemInfoWindow.xaml</DependentUpon>
     </Compile>
