--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -23,9 +23,9 @@
     <add name="LocationConnection" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
     <add name="LocationHistoryConnection" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
     <add name="topviewxpConnection" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="EngineLite" connectionString="Data Source=engine.db" providerName="System.Data.SQLite.EF6" />
-    <add name="LocationLite" connectionString="Data Source=location.db" providerName="System.Data.SQLite.EF6" />
-    <add name="LocationHisLite" connectionString="Data Source=locationHis.db" providerName="System.Data.SQLite.EF6" />
+    <add name="EngineLite" connectionString="Data Source=Data\engine.db" providerName="System.Data.SQLite.EF6" />
+    <add name="LocationLite" connectionString="Data Source=Data\location.db" providerName="System.Data.SQLite.EF6" />
+    <add name="LocationHisLite" connectionString="Data Source=Data\locationHis.db" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
