--- a/Server/WCFServer/Tools/EngineClient/packages.config
+++ b/Server/WCFServer/Tools/EngineClient/packages.config
@@ -1,7 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="SQLite.CodeFirst" version="1.5.1.25" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net45" />
