--- a/Server/WCFServer/LocationWCF/Location.Server.csproj
+++ b/Server/WCFServer/LocationWCF/Location.Server.csproj
@@ -185,12 +185,6 @@
     <Compile Include="Models\Authorization\AuthorizationWindow.xaml.cs">
       <DependentUpon>AuthorizationWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\EngineTool\ArchorConfigureBox.xaml.cs">
-      <DependentUpon>ArchorConfigureBox.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EngineTool\ArchorConfigureWindow.xaml.cs">
-      <DependentUpon>ArchorConfigureWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Models\EngineTool\ArchorListExportControl.xaml.cs">
       <DependentUpon>ArchorListExportControl.xaml</DependentUpon>
     </Compile>
@@ -244,6 +238,9 @@
     <Compile Include="Windows\EventSendTestWindow.xaml.cs">
       <DependentUpon>EventSendTestWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\Simple\EncodingTest.xaml.cs">
+      <DependentUpon>EncodingTest.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\Simple\ItemInfoWindow.xaml.cs">
       <DependentUpon>ItemInfoWindow.xaml</DependentUpon>
     </Compile>
@@ -272,14 +269,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Models\Authorization\AuthorizationWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Models\EngineTool\ArchorConfigureBox.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Models\EngineTool\ArchorConfigureWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -348,6 +337,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\EventSendTestWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Simple\EncodingTest.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -599,6 +592,10 @@
     <ProjectReference Include="..\..\..\WebApi\WebNSQLib\WebNSQLib.csproj">
       <Project>{13ccc157-451b-4249-bd65-a4db04a5c143}</Project>
       <Name>WebNSQLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tools\ArchorUDPTool\ArchorUDPTool.csproj">
+      <Project>{a88d0971-0c84-442a-a8ab-9d41594c81be}</Project>
+      <Name>ArchorUDPTool</Name>
     </ProjectReference>
     <ProjectReference Include="..\Tools\EngineClient\EngineClient.csproj">
       <Project>{0629d8f9-cf59-4576-8d31-47d87db57c17}</Project>
