基站设置工具
批量修改服务器IP

--- a/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
+++ b/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
@@ -76,6 +76,7 @@
     <Compile Include="ArchorConfigureWindow.xaml.cs">
       <DependentUpon>ArchorConfigureWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ArchorManager.cs" />
     <Compile Include="ArchorUDPSettingWindow.xaml.cs">
       <DependentUpon>ArchorUDPSettingWindow.xaml</DependentUpon>
     </Compile>
